# aws-greengrass-system-log-forwarder

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  RELEASE_NOTES.md  bootstrap.sh  fc_deps.json  flake.nix  recipe.yaml
.github/workflows/: build-podman.yml  build-release.yml  ci.yml
dep_modules/aws-sigv4/: sigv4_config.h
dep_modules/coreHTTP/: core_http_config.h
docs/: design.md
include/: aws_credentials_util.h  aws_sigv4.h  cloud_request.h  log_processor.h  ring_buffer.h  slf_backoff.h  system-log-forwarder.h  tes_http_util.h
misc/: dictionary.txt  iwyu_mappings.yml
src/: aws_credentials_util.c  aws_credentials_util.h  aws_sigv4.c  aws_sigv4.h  cloud-logger.c  cloud_logger.h  cloud_request.c  cloud_request.h  http_request.c  log_processor.c  log_processor.h  read_logs.c  ring_buffer.c  ring_buffer.h  slf_backoff.c  system-log-forwarder.c  system-log-forwarder.h  tes_http_util.c  tes_http_util.h  test.c  test.h
